gobmkida/c2/do_trymove
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_trymove/src/engine/board.c:1130:35: error: use of undeclared identifier 'byte_9B389F'
|| 3 - color != ( unsigned __int8)byte_9B389F[pos] && 3 - color != board[pos + 1]) 
                                  ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_trymove/src/obj/1/board.o] Error 1
